daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N6_wrong_enum_value/h1.hex
34fddea90caee6ce9b57aa04f9df5f56ae76e67ed5c9b33dae1d5291013b874e0f43409a54640bbf4f621960d7b55399b91f87b5aa34cffc0c74b5d999691b84
